# clangTest

./: .gitignore  CMakeLists.txt  main.cpp
test/: AsguardSmurf.hpp  ExcludeLogs.hpp  TaskNames.hpp  tdot_asguard.cpp
test/include/omniORB4/: acconfig.h  sslContext.h
test/include/omniORB4/internal/: SocketCollection.h
test/include/orocos/depth_map_preprocessing/: TaskStates.hpp
test/include/orocos/depth_map_preprocessing/proxies/: OutlierFilter.hpp
test/include/orocos/envire_exporters/: TaskStates.hpp
test/include/orocos/envire_exporters/proxies/: MLSMapKalmanExporter.hpp
test/include/orocos/local_tsdf_mapper/: TaskStates.hpp
test/include/orocos/local_tsdf_mapper/proxies/: Task.hpp
test/include/orocos/localization/: TaskBase.hpp  TaskStates.hpp
test/include/orocos/simple_pose_integrator/: TaskStates.hpp
test/include/orocos/slam3d/: TaskStates.hpp
test/include/orocos/trajectory_follower/: TaskStates.hpp
test/include/orocos/ugv_nav4d/: TaskStates.hpp
test/include/pcl-1.8/pcl/: pcl_config.h
test/include/rtt/: rtt-config.h
test/startup/: AbstractRobot.hpp  AsguardRobot.hpp  AsguardSimRobot.hpp  CommonRealRobot.hpp  CommonSimRobot.hpp  EnternStartup.hpp
test/startup/init/: Slam3dMLS.hpp
test/states/: AlignRobot.hpp  CaveControl.hpp  ConnectMapper.hpp  DriveTo.hpp  DummyState.hpp  ExecuteDriveTrajectory.hpp  ExploreArea.hpp  ExploreBase.hpp  Forward.hpp  GenerateMap.hpp  GeneratePrecalculatedMap.hpp  LazyProxy.hpp  MoveSteadyForX.hpp  PlanDriveTrajectoryUGVNav4d.hpp  RandomTargetSelector.hpp  Sleep.hpp  SteadyForward.hpp  WaitForCommand.hpp
(+17 files in other folders)
